# Minecraft

./: .gitmodules  CMakeLists.txt  README.md
assets/shaders/: cube.fs  cube.vs  testShader.fs
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: main.cpp
src/gfx/: mesh.cpp  mesh.hpp  render.cpp  render.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
src/uti/: camera.cpp  camera.hpp
src/world/: block.cpp  block.hpp  chunk.cpp  chunk.hpp  direction.hpp  world.cpp  world.hpp
